# ModularInstrumentPanel

./: .gitignore  README.md  mips.py  pyproject.toml  requirements.txt
mips/: devicemanager.py  mips.py  new_mips.py  parsemanager.py  templater.py
mips/profiles/: test_profile.toml
mips/sketches/: test_profile.ino
mips/templates/: sketch_template.j2
profiles/: test_profile.toml
sketches/: [TEST] test_profile.ino  test_profile.ino
tests/: test.py
